homelab/k8s/argocd/argocd-nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argocd
  annotations:
    #kubernetes.io/ingress.class: nginx
    #nginx.ingress.kubernetes.io/auth-tls-secret: "argocd/argocd-server-tls-ca"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  rules:
  #- host: argocd-server
  - host: argocd.flinnlab.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port: 
              name: https
  tls:
    - hosts:
        - argocd.flinnlab.com
      secretName: argocd-server-tls
      #secretName: argocd-secret
      #  - argocd-server
      #secretName: argocd-secret
      #secretName: argocd-flinnlab-com
